--- a/front-end/src/app/contacts/filter/contacts-filter.component.html
+++ b/front-end/src/app/contacts/filter/contacts-filter.component.html
@@ -50,7 +50,7 @@
             </div>
       </div>
 
-      <div class="card">
+      <div class="card" *ngIf="isRecycleBinViewActive()">
         <div class="card-header transactions__filter-title" (click)="toggleDeletedDateFilterItem()">
           Deleted Date
           <i class="float-right" aria-hidden="true" 
