Fne 1492 shawn sprint22 (#1239)
* add new sched h

* ngIf the sched components

* add sched type

* new abstract

* change button to div for tab through issue

* convert to sub class of abstract sched

* add reports edit creen field to local storage

* fix multiple calls dynamic forms API with angular style click

* new sched h comp

* add sched type

* store reports edit screen in local storage

* add edit mode

--- a/front-end/src/app/forms/sched-h/sched-h.component.html
+++ b/front-end/src/app/forms/sched-h/sched-h.component.html
@@ -1,3 +1,4 @@
+<!-- <h1>Schedule H Prototype</h1> -->
 <ng-template #rt let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadItem(r)" [term]="t"></ngb-highlight>
 </ng-template>
@@ -62,20 +63,15 @@
               <ng-container *ngFor="let col of row.cols">
                 <div [class]="row.colClassName" *ngIf="isToggleShow(col)">
                   <div class="form-group" [style.width]="setSelectTypeWidth(col)">
+                  <!-- <div class="col?.type === 'radio' ? 'form-check' : 'form-group'" 
+                      [style.width]="setSelectTypeWidth(col)"> -->
                     <label [for]="col?.name">
                       {{ col?.text }}
-                      <!-- replace button with div below to resolve tab issue into button -->
-                      <!-- <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
-                        tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
-                        <i class="info-icon" aria-hidden="true"></i>
-                        <span class="sr-only">Click here for more information</span>
-                      </button> -->
                       <div type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                         tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
                         <i class="info-icon" aria-hidden="true"></i>
                         <span class="sr-only">Click here for more information</span>
                       </div>
-
                       <ng-container *ngIf="!col?.validation?.required && col?.name !== 'contribution_aggregate'">
                         (Optional)
                       </ng-container>
@@ -258,13 +254,15 @@
                         [attr.value]="col?.value"
                         [checked]="isFieldName(col?.name, 'memo_code') ? checkForMemoCode(col?.name) : null"
                         [formControlName]="col?.name"
-                        (change)="isFieldName(col?.name, 'memo_code') ? memoCodeChange($event, col?.name) : null" [ngClass]="
+                        (change)="isFieldName(col?.name, 'memo_code') ? memoCodeChange($event, col?.name) : 
+                          handleCheckboxChange($event, col)" 
+                        [ngClass]="
                             frmIndividualReceipt.get(col?.name)?.invalid &&
                             (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                               ? 'input-field-error'
                               : ''
                           " />
-                    </ng-container>
+                    </ng-container>                   
                     <ng-container *ngIf="col?.type === 'textarea'">
                       <textarea [style.height]="col?.height" [style.width]="col?.width"
                         [style.overflow]="col.scroll ? col.scroll : null" [attr.name]="col?.name"
@@ -370,6 +368,40 @@
             </div>
           </ng-container>
         </ng-container>
+
+        <!-- <div class="row">
+          <div class="col col-md-2">
+            <div class="form-group">
+                <label for="field1">
+                    Field 1
+                    <div type="button" class="btn btn-info" ngbTooltip="Test"
+                      tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
+                      <i class="info-icon" aria-hidden="true"></i>
+                      <span class="sr-only">Click here for more information</span>
+                    </div>
+                  </label>
+              <input id="field1"
+                class="form-control forms__big_checkbox" 
+                type="checkbox" name="expenditure_purpose" style="width: 25px; height: 30px;">
+            </div>
+          </div>
+          <div class="col col-md-2">
+            <div class="form-group">
+                <label for="field2">
+                    Field 2
+                    <div type="button" class="btn btn-info" ngbTooltip="Test"
+                      tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
+                      <i class="info-icon" aria-hidden="true"></i>
+                      <span class="sr-only">Click here for more information</span>
+                    </div>
+                  </label>
+              <input id="field2"
+                class="form-control forms__big_checkbox" 
+                type="checkbox" name="expenditure_purpose" style="width: 25px; height: 30px;">
+            </div>
+          </div>
+        </div> -->
+
         <app-sub-transactions-table [hidden]="!isShowChildTransactions()" 
           [subTransactions]="subTransactions"
           [formType]="formType">
