--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -205,7 +205,7 @@
                     </div>
 
                     <div [@fadeInOut]
-                        *ngIf="isReportViewActive() && report.form_type !== 'F99' && report.status === 'Saved'"
+                        *ngIf="isReportViewActive() && report.form_type !== 'F99' && report.status === 'Saved' && (report.amend_ind === 'N' || report.amend_ind === 'T')"
                         class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
 
                         <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
@@ -214,6 +214,30 @@
 
 
                         <div id="forms__trx-dropdown-action1" ngbDropdownToggle   class="dropdown-menu" ngbDropdownMenu>
+                            <button class="dropdown-item" (click)="editReport(report)">
+                                <i class="fas fa-edit"></i> Edit
+                            </button>
+                            <button class="dropdown-item" (click)="printReport(report)">
+                                <i class="fas fa-print"></i> Print
+                            </button>
+                            <button class="dropdown-item" (click)="uploadReport(report)">
+                                <i class="fas fa-upload"></i> Upload
+                            </button>
+                            <button class="dropdown-item" (click)="trashReport(report)">
+                                <i class="fas fa-trash"></i> Trash
+                            </button>
+                        </div>
+                    </div>
+
+                    <div [@fadeInOut]
+                        *ngIf="isReportViewActive() && report.form_type !== 'F99' && report.status === 'Saved' && !(report.amend_ind === 'N' || report.amend_ind === 'T')"
+                        class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+
+                        <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
+                            <i class="fas fa-ellipsis-h"></i>
+                        </button>
+
+                        <div id="forms__trx-dropdown-action5" ngbDropdownToggle   class="dropdown-menu" ngbDropdownMenu>
                             <button *ngIf="report.amend_max === 'up' || report.amend_max === 'down'" class="dropdown-item" (click)="editReport(report)">
                                 <i class="fas fa-edit"></i> Edit
                             </button>
@@ -237,10 +261,10 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action2" class="dropdown-menu" ngbDropdownMenu>
-                            <button class="dropdown-item" *ngIf="report.amend_max === 'up' || report.amend_max === 'down'" (click)="viewReport(report)">
+                            <button *ngIf="report.amend_ind === 'N' || report.amend_max === 'up' || report.amend_max === 'down'" class="dropdown-item"  (click)="viewReport(report)">
                                 <i class="fas fa-eye"></i> View
                             </button>
-                            <button  *ngIf="report.amend_max === 'up' || report.amend_max === 'down'" class="dropdown-item" (click)="amendReport(report)">
+                            <button  *ngIf="report.amend_ind === 'N' ||report.amend_max === 'up' || report.amend_max === 'down'" class="dropdown-item" (click)="amendReport(report)">
                                 <i class="fas fa-edit"></i> Amend
                             </button>
                             <button class="dropdown-item" (click)="downloadReport(report)">
