Fne all satheesh sprint22 (#1246)
* transaction type selection screen changes

* ng-select error UI changes

* SL changes & earmark memo amount changes

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -343,6 +343,26 @@
                           ">
                       </ng-select>
                     </ng-container>
+                    <ng-container *ngIf="col?.type === 'select' && 
+                          (isFieldName(col?.name, 'levin_account_id'))">
+                      <ng-select #levinAccountSelect 
+                        [items]="levinAccounts" 
+                        class="forms__select" 
+                        [formControlName]="col?.name" 
+                        bindValue="levin_account_id" 
+                        bindLabel="levin_account_name" 
+                        [selectOnTab]="true"
+                        [ngClass]="
+                            frmIndividualReceipt.get(col?.name)?.invalid &&
+                            (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                              ? 'forms__select-error'
+                              : ''
+                          ">
+                        <ng-template ng-option-tmp let-item="item" let-search="searchTerm" let-index="index">
+                          <span>{{ item.levin_account_id + ' - ' + item.levin_account_name }}</span>
+                        </ng-template>
+                      </ng-select>
+                    </ng-container>
                   </div>
                 </div>
               </ng-container>
