--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -67,7 +67,7 @@
                               type="button"
                               class="btn-info"
                               ngbTooltip=" {{ option?.info }}"
-                              (click)="$event.stopPropagation()"
+                              (click)="$event.stopPropagation();$event.preventDefault();"
                             >
                               <i class="info-icon" aria-hidden="true"></i>
                               <span class="sr-only">
