--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -343,6 +343,24 @@
                           ">
                       </ng-select>
                     </ng-container>
+                    <!-- (change)="handleActivityEventTypeChange($event, col)" -->
+                    <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'activity_event_type')">
+                      <ng-select #activityEventTypeSelect 
+                        [items]="activityEventTypes" 
+                  
+                        class="forms__select activity-event-type-select" 
+                        [formControlName]="col?.name" 
+                        bindValue="activityEventType"
+                        bindLabel="activityEventTypeDescription" 
+                        [selectOnTab]="true"
+                        [ngClass]="
+                            frmIndividualReceipt.get(col?.name)?.invalid &&
+                            (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                              ? 'forms__select-error'
+                              : ''
+                          ">
+                      </ng-select>
+                    </ng-container>                     
                     <ng-container *ngIf="col?.type === 'select' && 
                           (isFieldName(col?.name, 'levin_account_id'))">
                       <ng-select #levinAccountSelect 
