fix cancel when return to parent

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -515,7 +515,7 @@
                     Previous
                   </button>
                   <button *ngIf="subTransactionInfo && subTransactionInfo.isParent === false" class="btn btn-previous btn-left"
-                    type="button" (click)="returnToParent()">
+                    type="button" (click)="returnToParent(editScheduleAction)">
                     Cancel
                   </button>
                   <button class="btn btn-secondary btn-right" (click)="saveOnly()">
