--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.scss
@@ -23,7 +23,7 @@
         display: block;
         width: 20%;
         h1 {
-          font-family: sans-serif;
+          //font-family: sans-serif;
         }
         @include clearfix();
         .btn-options {
@@ -73,7 +73,7 @@
           }
           &.fieldset {
             font-size: 1.5rem;
-            font-family: sans-serif;
+            //font-family: sans-serif;
             font-weight: bold;
           }
           label {
@@ -87,7 +87,7 @@
             }
           }
           label {
-            font-family: 'sans-serif';
+            //font-family: 'sans-serif';
             font-size: 1rem;
           }
           .input-group-prepend {
