--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
@@ -186,5 +186,11 @@
   .arrow-bottom-right {
     transform: rotate(90deg) skew(-10deg, -10deg);
   }
-  
+
+  .width-100 {
+    width: 100%;
+  }
+  .width-25 {
+    width: 25%;
+  }
 }
