--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -98,8 +98,8 @@
         </f3x-individual-receipt>
         <app-sched-f
           [hidden]="scheduleType !== 'sched_f'"
-          [transactionTypeText]="transactionTypeTextSchedH"
-          [transactionType]="transactionTypeSchedH"
+          [transactionTypeText]="transactionTypeTextSchedF"
+          [transactionType]="transactionTypeSchedF"
           [scheduleAction]="scheduleAction"
           [scheduleType]="scheduleType"
           (status)="onNotify($event)"
