--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -75,8 +75,8 @@
                         <i class="info-icon" aria-hidden="true"></i>
                         <span class="sr-only">Click here for more information</span>
                       </div>
-
-                      <ng-container *ngIf="!col?.validation?.required && col?.name !== 'contribution_aggregate'">
+                      <ng-container *ngIf="!col?.validation?.required 
+                        && !col?.isReadonly">
                         (Optional)
                       </ng-container>
                     </label>
