getfed/non-fed when activity event changes

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -348,7 +348,7 @@
                     <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'activity_event_type')">
                       <ng-select #activityEventTypeSelect 
                         [items]="activityEventTypes" 
-                  
+                        (change)="handleActivityEventTypeChange($event, col)"
                         class="forms__select activity-event-type-select" 
                         [formControlName]="col?.name" 
                         bindValue="activityEventType"
