--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -325,8 +325,11 @@
                 <span class="sr-only">Click here for more information</span>
               </button>
             </label>
-            <div class="file-upload-container border-bottom" *ngIf="file === null && fileNameToDisplay === null">
-              <input #fileInput type="file" name="file" accept="application/pdf" (change)="setFile($event)" [attr.disabled]="!editMode ? '' : null" />
+            <div class="file-upload-container border-bottom" *ngIf="file === null && fileNameToDisplay === null && editMode">
+              <input #fileInput type="file" name="file" accept="application/pdf" (change)="setFile($event)" />
+            </div>
+            <div class="file-upload-container border-bottom" *ngIf="file === null && fileNameToDisplay === null && !editMode">
+              <input type="button" (click)="checkIfEditMode()" value="Choose file"/> No file chosen
             </div>
             <div class="file-attached-container" *ngIf="file !== null || fileNameToDisplay !== null">
               <div class="grid-row">
