H4/H6 populate fed/non-fed amounts

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -117,9 +117,14 @@
               }
             }
             .ng-select-container {
+              // Not working
               height: 45px;
             }
           }
+          // Not working
+          // .ng-select-container {
+          //   height: 45px !important;
+          // }
           .ng-dropdown-panel {
             .ng-dropdown-panel-items {
               .ng-option {
