debugging info for sched F

--- a/front-end/src/app/forms/sched-f/sched-f.component.html
+++ b/front-end/src/app/forms/sched-f/sched-f.component.html
@@ -319,7 +319,7 @@
                       </div>
 
                       <ng-container *ngIf="!col?.validation?.required && col?.name !== 'contribution_aggregate'">
-                        (Optional)
+                        (Optional) {{i}}  {{col.name}}
                       </ng-container>
                     </label>
                     <ng-container *ngIf="col?.type === 'text' || col?.type === 'date'">
